--- a/Realtime Rendering/Todo.txt
+++ b/Realtime Rendering/Todo.txt
@@ -1,7 +1,6 @@
 Current:
-	So you got the first part of the Geometry Shader Tutorial working, you're at "creating a geometry shader"
-	Drawing text messes up drawing of 4 red points, and I think it is because the text doesnt have its own VAO or something like that, and 
-		it's binding its vertices to the geometry VAO, i dunno. Just thinking outloud here.
+	Got the grid generator function working (I think) trying to debug it by making terrain shader use geometry shaders to render vertices, but kinda stuck
+	nothing is rendering, despite matching open.gl tutorial. 
 
 General:
 	Make sure you're deleting everything you need to, hint, you aren't
@@ -14,6 +13,7 @@ Camera:
 	Need to check for memory leaks and such, ***a ton of stuff isn't getting freed***
 
 MeshInstance:
+	Merge RenderGrid into Render
 
 New Stuff:
 	Geometry shaders
