--- a/Realtime Rendering/Todo.txt
+++ b/Realtime Rendering/Todo.txt
@@ -1,5 +1,6 @@
 Urgent:
 	Implement defining grid points with images
+	Figure out werid highlights and shadowing on terrain
 	Clean up grid related code
 	GLuint buffers array in Mesh is potentially going to lead to more confusion than convenience, give each std vector an ID? Or some other solution
 	Do all these other To-Do's before you move on to any thing else large, and clean up/comment things over all
